<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CookBook</string>

    // Menu action buttons
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="search_bar_hint">What are we cooking?</string>

    // Example Recipe when book is empty
    <string name="example_title">Empty Book</string>
    <string name="example_total_time">0h00</string>
    <string name="example_people">0 people</string>
    <string name="example_price">€€€</string>
    <string name="example_ingredients">There is\'nt any recipe yet\nYou should try adding a new one!</string>
    <string name="example_steps">Simply click on the + button to start writing it</string>
    <string name="example_preparation_time">Preparation time: 0h00</string>
    <string name="example_cooking_time">Cooking Time: 0h00</string>

    // Main Activity
    <string name="ingredients_title">Ingredients</string>
    <string name="steps_title">Steps</string>
    <string name="duration_title">Duration</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="text_prepa_time">• Preparation time: </string>
    <string name="text_cooking_time">• Cooking Time: </string>
    <string name="text_people"> people</string>
    <string name="text_price">€</string>
    <string name="delete_recipe_title">Delete this recipe</string>
    <string name="delete_recipe_message">Are you sure?</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel_delete">Cancel</string>


    // Add Activity
    <string name="add_activity_title">Add new recipe</string>
    <string name="add_title">Title :</string>
    <string name="add_insert_title">Veggie Lasagna</string>
    <string name="add_ingredients">Ingredients :</string>
    <string name="hint_ingredients">500gr of Pasta</string>
    <string name="add_steps">Steps :</string>
    <string name="hint_steps">Preheat the oven on 180 degrees</string>
    <string name="add_people">People :</string>
    <string name="add_people_starting_value">1</string>
    <string name="add_duration">Duration :</string>
    <string name="add_preparation_time">Preparation Time :</string>
    <string name="add_cooking_time">Cooking Time :</string>
    <string name="add_hour">h</string>
    <string name="add_minutes">min</string>
    <string name="add_hint_time">00</string>
    <string name="add_price">Price :</string>
    <string name="add_confirm_button">Confirm</string>
    <string name="prefix_ingredients_steps">• </string>


    // Edit Activity
    <string name="edit_activity_title">Edit your recipe</string>


    // Errors
    <string name="empty_title">You must insert a title</string>
    <string name="empty_ingredients">You must insert at least one ingredient</string>
    <string name="empty_steps">You must insert at least one step</string>
    <string name="search_no_result">Nothing found</string>
    <string name="nothing_to_delete">Your book is already empty</string>
    <string name="nothing_to_edit">Nothing to edit, your book is empty</string>
    <string name="edit_error_launching">Launching EditActivity without an associated recipe.</string>


    // Others
    <string name="not_implemented_yet">Not implemented yet, coming soon</string>
    <string name="button_plus_content_description">Plus icon</string>
    <string name="button_minus_content_description">Minus icon</string>
</resources>