<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/myFirstColor"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="?attr/myFourthColor"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.CookBook.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/myFourthColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.CookBook.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="cursive"
                android:text="@string/example_title"
                android:textAlignment="center"
                android:textColor="?attr/mySecondColor"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipe_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/example_total_time"
                android:textAlignment="center"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/previousButton"
                app:layout_constraintStart_toStartOf="@+id/previousButton"
                app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

            <TextView
                android:id="@+id/recipe_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/example_people"
                android:textAlignment="center"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

            <TextView
                android:id="@+id/recipe_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/example_price"
                android:textAlignment="center"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/nextButton"
                app:layout_constraintStart_toStartOf="@+id/nextButton"
                app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

            <Button
                android:id="@+id/nextButton"
                android:backgroundTint="?attr/myFourthColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:onClick="onClickNext"
                android:text="@string/next_button"
                android:textColor="?attr/mySecondColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/recipe_people"
                app:layout_constraintTop_toBottomOf="@+id/recipe_price" />

            <Button
                android:id="@+id/previousButton"
                android:backgroundTint="?attr/myFourthColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:onClick="onClickPrevious"
                android:text="@string/previous_button"
                android:textColor="?attr/mySecondColor"
                app:layout_constraintEnd_toStartOf="@+id/recipe_people"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_total_time" />

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="cursive"
                android:text="@string/ingredients_title"
                android:textColor="?attr/mySecondColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previousButton" />

            <TextView
                android:id="@+id/recipe_list_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/example_ingredients"
                android:textAlignment="textStart"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients" />

            <TextView
                android:id="@+id/recipe_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="cursive"
                android:text="@string/steps_title"
                android:textColor="?attr/mySecondColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_list_ingredients" />

            <TextView
                android:id="@+id/recipe_list_steps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/example_steps"
                android:textAlignment="textStart"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_steps" />

            <TextView
                android:id="@+id/recipe_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="cursive"
                android:text="@string/duration_title"
                android:textColor="?attr/mySecondColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_list_steps" />

            <TextView
                android:id="@+id/recipe_prepa_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/example_preparation_time"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_duration" />

            <TextView
                android:id="@+id/recipe_cooking_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/example_cooking_time"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_prepa_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>